--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="col-3">
     <div class="list-group">
-      <a routerLink="/" class="list-group-item list-group-item-action"
+      <a routerLink="/dashboard" class="list-group-item list-group-item-action"
         >Dashboard</a
       >
       <a routerLink="/school" class="list-group-item list-group-item-action"
