--- a/src/app/school/school.component.html
+++ b/src/app/school/school.component.html
@@ -1,30 +1,18 @@
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Id</th>
+      <th scope="col">Name</th>
+      <th scope="col">Location</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
+    <ng-container *ngFor="let schoolInfo of schools">
+      <tr>
+        <th scope="row">{{ schoolInfo.id }}</th>
+        <td>{{ schoolInfo.name }}</td>
+        <td>{{ schoolInfo.location }}</td>
+      </tr>
+    </ng-container>
   </tbody>
 </table>
