--- a/src/app/school/school.component.html
+++ b/src/app/school/school.component.html
@@ -1,59 +1,32 @@
-<div *ngIf="!addUpdateSchool">
-  <button class="btn btn-primary" (click)="addUpdateSchool = !addUpdateSchool">
-    Add School
-  </button>
-  <table class="table">
-    <thead>
+<a class="btn btn-primary" [routerLink]="['./add']"> Add School </a>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">Name</th>
+      <th scope="col">Location</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <ng-container *ngFor="let schoolInfo of schools">
       <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Name</th>
-        <th scope="col">Location</th>
-        <th>Action</th>
+        <th scope="row">{{ schoolInfo.id }}</th>
+        <td>{{ schoolInfo.name }}</td>
+        <td>{{ schoolInfo.location }}</td>
+        <td>
+          <a
+            class="btn btn-link"
+            [routerLink]="['./add']"
+            [queryParams]="{ schoolId: schoolInfo.id }"
+          >
+            Edit
+          </a>
+          <button class="btn btn-link" (click)="deleteSchool(schoolInfo.id)">
+            Delete
+          </button>
+        </td>
       </tr>
-    </thead>
-    <tbody>
-      <ng-container *ngFor="let schoolInfo of schools">
-        <tr>
-          <th scope="row">{{ schoolInfo.id }}</th>
-          <td>{{ schoolInfo.name }}</td>
-          <td>{{ schoolInfo.location }}</td>
-          <td>
-            <button class="btn btn-link">Edit</button>
-            <button class="btn btn-link">Delete</button>
-          </td>
-        </tr>
-      </ng-container>
-    </tbody>
-  </table>
-</div>
-
-<div *ngIf="addUpdateSchool">
-  <button class="btn btn-primary" (click)="addUpdateSchool = !addUpdateSchool">
-    Show Schools
-  </button>
-  <form [formGroup]="myForm" (ngSubmit)="addSchool(myForm)">
-    <div class="form-group">
-      <label for="schoolName">Name</label>
-      <input
-        type="text"
-        class="form-control"
-        id="schoolName"
-        formControlName="schoolName"
-        name="schoolName"
-        placeholder="Enter School Name"
-      />
-    </div>
-    <div class="form-group">
-      <label for="schoolocation">Name</label>
-      <input
-        type="text"
-        class="form-control"
-        id="schoolocation"
-        formControlName="schoolocation"
-        name="schoolocation"
-        placeholder="Enter School Location"
-      />
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
-</div>
+    </ng-container>
+  </tbody>
+</table>
