--- a/src/app/school/add-update-school/add-update-school.component.html
+++ b/src/app/school/add-update-school/add-update-school.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="myForm" (ngSubmit)="addSchool(myForm)">
+<form [formGroup]="myForm" (ngSubmit)="addUpdateSchool(myForm)">
   <div class="form-group">
     <label for="schoolName">Name</label>
     <input
