4 files modified, 2 added, 1 deleted

--- a/src/app/school/school.component.html
+++ b/src/app/school/school.component.html
@@ -17,7 +17,7 @@
         <td>
           <a
             class="btn btn-link"
-            [routerLink]="['./add']"
+            [routerLink]="['./update']"
             [queryParams]="{ schoolId: schoolInfo.id }"
           >
             Edit
