--- a/src/app/school/add-update-school/add-update-school.component.html
+++ b/src/app/school/add-update-school/add-update-school.component.html
@@ -11,7 +11,7 @@
     />
   </div>
   <div class="form-group">
-    <label for="schoolocation">Name</label>
+    <label for="schoolocation">Location</label>
     <input
       type="text"
       class="form-control"
