--- a/src/app/sclass/sclass.component.html
+++ b/src/app/sclass/sclass.component.html
@@ -22,7 +22,7 @@
           <a
             class="btn btn-link"
             [routerLink]="['./update']"
-            [queryParams]="{ classId: item.id }"
+            [queryParams]="{ sclassId: item.id }"
           >
             Edit
           </a>
